[FIX] account: fix alignment issue in invoice report
Steps to reproduce:
1. Install Accounting module.
2. Change document layout to 'Boxed' from Settings.
3. Print any invoice → notice that `total section` is shifted downward compared
   to other PDF layouts.

Issue:
The amount total section in the invoice PDF is not aligned properly due to
extra margin.

Solution:
Remove the unnecessary margin to ensure the total section is aligned correctly
across all layouts.

opw - 4911228

--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -183,7 +183,7 @@
                             </tbody>
                         </table>
                         <div class="overflow-hidden">
-                            <div id="right-elements" t-attf-class="#{'col-5 mt-5' if report_type == 'pdf' else 'col-12 col-md-5'} ms-5 d-inline-block float-end">
+                            <div id="right-elements" t-attf-class="#{'col-5' if report_type == 'pdf' else 'col-12 col-md-5'} ms-5 d-inline-block float-end">
                                 <div id="total" class="clearfix row">
                                     <div class="ms-auto">
                                         <table class="o_total_table table table-borderless avoid-page-break-inside">
