[IMP] l10n_sa: allow backdating invoices via confirmation date
Previously, l10n_sa_confirmation_datetime was automatically set when invoices
were confirmed, causing issues when users needed to backdate invoices. This
created mismatches between Odoo's invoice date recognition and ZATCA's VAT
liability calculation, forcing invoices into wrong tax return periods.

Changes:
- Expose l10n_sa_confirmation_datetime as "Issue Date" in form view
- Allow manual setting of l10n_sa_confirmation_datetime before invoice confirmation
- Preserve original Issue Date for rejected Phase 2 invoices (400 errors)
- Hide Invoice Date field but sync it with Issue Date
- Update PDF to display Issue Date instead of Invoice Date
- Remove footer date from PDF
- Extend future date validation to include Issue Date

task-5009969

--- a/addons/l10n_sa/views/report_invoice.xml
+++ b/addons/l10n_sa/views/report_invoice.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="arabic_english_invoice" inherit_id="l10n_gcc_invoice.arabic_english_invoice">
+        <div name="invoice_date" position="after">
+            <div class="row" t-if="o.l10n_sa_confirmation_datetime and o.move_type in ('out_invoice', 'out_refund')" name="issue_date">
+                <div class="col-2 offset-6">
+                    <strong style="white-space:nowrap">Issue Date:
+                    </strong>
+                </div>
+                <div class="col-2">
+                    <span t-out="o.get_l10n_sa_confirmation_datetime_sa_tz()"/>
+                </div>
+                <div class="col-2 text-end">
+                    <strong style="white-space:nowrap">:
+                        تاريخ الإصدار
+                    </strong>
+                </div>
+            </div>
+        </div>
+        <div name="invoice_date" position="attributes">
+            <attribute name="t-att-class">'d-none' if o.l10n_sa_confirmation_datetime and o.move_type in ('out_invoice', 'out_refund') else 'row'</attribute>
+        </div>
         <xpath expr="//div[@name='due_date']" position="after">
             <div class="row" t-if="o.l10n_sa_delivery_date" name="delivery_date">
                 <div class="col-6"></div>
@@ -112,9 +131,6 @@
         </xpath>
         <xpath expr="//div[hasclass('clearfix')]" position="attributes">
             <attribute name="class">clearfix pt-2 pb-2</attribute>
-        </xpath>
-        <xpath expr="//div[hasclass('page')]">
-            <t t-set="additional_footer_text" t-value="o.get_l10n_sa_confirmation_datetime_sa_tz()"/> <!-- This is to show the issue date on the footer of all layouts. -->
         </xpath>
     </template>
 </odoo>
