--- a/addons/l10n_sa/views/view_move_form.xml
+++ b/addons/l10n_sa/views/view_move_form.xml
@@ -5,8 +5,18 @@
             <field name="model">account.move</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//label[@for='invoice_date'][1]" position="attributes">
+                    <attribute name="attrs">{"invisible": ['|', ('move_type', 'not in', ('out_invoice', 'out_refund', 'out_receipt')), ('l10n_sa_show_delivery_date', '=', True)]}</attribute>
+                </xpath>
+                <xpath expr="//label[@for='invoice_date'][2]" position="attributes">
+                    <attribute name="attrs">{"invisible": ['|', ('move_type', 'not in', ('in_invoice', 'out_refund', 'out_receipt')), ('l10n_sa_show_delivery_date', '=', True)]}</attribute>
+                </xpath>
+                <field name="invoice_date" position="attributes">
+                    <attribute name="attrs">{"invisible": [('l10n_sa_show_delivery_date', '=', True)]}</attribute>
+                </field>
                 <field name="invoice_date" position="after">
-                    <field name="l10n_sa_show_delivery_date" invisible="1"/>
+                    <field name="l10n_sa_confirmation_datetime" attrs="{'invisible': [('l10n_sa_show_delivery_date', '=', False)], 'required': [('l10n_sa_show_delivery_date', '=', True)], 'readonly': [('state', '!=', 'draft')]}"/>
+                    <field name="l10n_sa_show_delivery_date" invisible='1' />
                     <field name="l10n_sa_delivery_date" attrs="{'invisible': [('l10n_sa_show_delivery_date', '=', False)], 'required': [('l10n_sa_show_delivery_date', '=', True)]}"/>
                 </field>
             </field>
