[REF] stock, mrp: split run_scheduler into separate crons
- Replaced the monolithic `run_scheduler` with three separate crons:
  - `run_scheduler_orderpoints`
  - `run_scheduler_reservations`
  - `run_scheduler_clean_quants`
  and adjusted scheduler frequency from daily to every 15 minutes,
  so it would be optimal to keep the system running on time and
  up to date.
- Updated stock and mrp menus link to the new cron jobs.
- Used `_commit_progress` with `total_task` and `task_done` to commit
  and log progress for the batch from a cron for better tracking
  and monitoring.

Task: 4375583

--- a/addons/mrp/views/stock_move_views.xml
+++ b/addons/mrp/views/stock_move_views.xml
@@ -98,9 +98,22 @@
             action="stock.action_stock_scrap"
             sequence="25"/>
 
-    <menuitem id="menu_procurement_compute_mrp"
-        action="stock.ir_cron_scheduler_action_ir_actions_server"
-        parent="mrp_planning_menu_root"
-        groups="base.group_no_one"
-        sequence="135"/>
+    <!-- Run Scheduler Menus -->
+    <menuitem id="menu_procurement_compute_mrp_orderpoints"
+            action="stock.ir_cron_scheduler_orderpoints_action_ir_actions_server"
+            parent="mrp_planning_menu_root"
+            groups="base.group_no_one"
+            sequence="110"/>
+
+    <menuitem id="menu_procurement_compute_mrp_reservations"
+            action="stock.ir_cron_scheduler_reservations_action_ir_actions_server"
+            parent="mrp_planning_menu_root"
+            groups="base.group_no_one"
+            sequence="120"/>
+
+    <menuitem id="menu_procurement_compute_mrp_clean_quants"
+            action="stock.ir_cron_scheduler_clean_quants_action_ir_actions_server"
+            parent="mrp_planning_menu_root"
+            groups="base.group_no_one"
+            sequence="130"/>
 </odoo>
