--- a/addons/stock/views/stock_rule_views.xml
+++ b/addons/stock/views/stock_rule_views.xml
@@ -116,8 +116,17 @@
         <menuitem action="action_rules_form" id="menu_action_rules_form"
         parent="menu_warehouse_config" sequence="5" groups="stock.group_adv_location"/>
 
-        <menuitem id="stock.menu_procurement_compute"
+        <!-- Run Scheduler Menus -->
+        <menuitem id="stock.menu_procurement_compute_orderpoints"
         parent="menu_stock_warehouse_mgmt" sequence="135" groups="base.group_no_one"
-        action="ir_cron_scheduler_action_ir_actions_server"/>
+        action="ir_cron_scheduler_orderpoints_action_ir_actions_server"/>
+
+        <menuitem id="stock.menu_procurement_compute_reservations"
+        parent="menu_stock_warehouse_mgmt" sequence="145" groups="base.group_no_one"
+        action="ir_cron_scheduler_reservations_action_ir_actions_server"/>
+
+        <menuitem id="stock.menu_procurement_compute_clean_quants"
+        parent="menu_stock_warehouse_mgmt" sequence="155" groups="base.group_no_one"
+        action="ir_cron_scheduler_clean_quants_action_ir_actions_server"/>
     </data>
 </odoo>
