--- a/addons/mi_website_ext/views/hr_leave_views.xml
+++ b/addons/mi_website_ext/views/hr_leave_views.xml
@@ -5,18 +5,24 @@
         <field name="model">hr.leave</field>
         <field name="inherit_id" ref="hr_holidays.hr_leave_view_tree"/>
         <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_approve']" position="attributes">
+                <attribute name="invisible">state != 'confirm' or (holiday_status_id.name != 'Solicitud de permiso' and uid != 6)</attribute>
+            </xpath>
+
             <xpath expr="//button[@name='action_validate']" position="attributes">
                 <attribute name="invisible">state != 'validate1' or uid != 6</attribute>
                 <attribute name="groups"/>
             </xpath>
-            <xpath expr="//button[@name='action_refuse']" position="attributes">
+            
+             <xpath expr="//button[@name='action_refuse']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath>
+            
             <xpath expr="//button[@name='action_refuse']" position="after">
-                <button string="Refuse" name="action_refuse" type="object" icon="fa-times"
-                        invisible="state != 'confirm'"
+                <button string="Rechazar" name="action_refuse" type="object" icon="fa-times"
+                        invisible="state != 'confirm' or (holiday_status_id.name != 'Solicitud de permiso' and uid != 6)"
                         groups="hr_holidays.group_hr_holidays_responsible"/>
-                <button string="Refuse" name="action_refuse" type="object" icon="fa-times"
+                <button string="Rechazar" name="action_refuse" type="object" icon="fa-times"
                         invisible="state != 'validate1' or uid != 6"/>
             </xpath>
         </field>
