[IMP] mass_mailing: delegate editable template header
The mass_mailing page template had an editable section
onto which content could be added to all mass_mailing
specific pages, such as subscription management.

Unfortunately, all these pages tend to have different uses,
leading to confusion for users as you do not want to display the
same messages for the users that are about to unsubscribe
than for the users that are managing their subscriptions.

This commit moves the editable mass_mailing headers out of the main template.

task-3546018

--- a/addons/mass_mailing/views/mailing_templates_portal_management.xml
+++ b/addons/mass_mailing/views/mailing_templates_portal_management.xml
@@ -2,6 +2,7 @@
 <odoo>
     <template id="mailing_report_deactivated" name="Report Unsubscribed">
         <t t-call="mass_mailing.layout">
+            <div id="wrap" class="oe_structure oe_empty"/>
             <div class="container mt8">
                 <div class="row">
                     <div class="col-lg-6 offset-lg-3">
