[FIX] website_sale: use aspect ratio config in product page image viewer
Steps
-----
1. Open a product page in eCommerce;
2. open the editor;
3. change the auto-crop setting to a non-default value;
4. enable zoom-on-click;
5. save & click to zoom.

Issue
-----
The thumbnails use a square aspect ratio.

Cause
-----
Their aspect ratio is hardcoded to be '1/1'.

Solution
--------

1. When instantiating the `ProductImageViewer` dialog, get the aspect
   ratio used by `.oe_website_sale`, and propagate it into a class name.
2. Use the CSS rules introduced by 670b1daa2254d to apply the correct
   aspect ratio based on the class name.

opw-4908881

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -1008,6 +1008,7 @@ $-product-ratios-map: (
 );
 
 @each $-ratio-name, $-ratio-value in $-product-ratios-map {
+    .o_wsale_image_viewer_ratio_#{$-ratio-name},
     .o_wsale_product_page_opt_image_ratio_#{$-ratio-name} {
         --o-wsale-product-image-ratio: #{$-ratio-value};
     }
