[FIX] account: adapt dashboard for dark mode
This commit adjusts dashboard element colors to enhance readability in
dark mode.

task-5122380

closes odoo/odoo#230305

Signed-off-by: William André (wan) <wan@odoo.com>

--- a/addons/account/static/src/components/bill_guide/bill_guide.scss
+++ b/addons/account/static/src/components/bill_guide/bill_guide.scss
@@ -21,5 +21,5 @@
 .account_drag_drop_btn {
     border-style: dashed !important;
     border-color: $o-brand-primary;
-    background-color: #F2EDF0;
+    background-color: mix($o-brand-primary, $o-view-background-color, 15%);
 }
