--- a/addons/account/static/src/views/account_dashboard_kanban/account_dashboard_kanban.scss
+++ b/addons/account/static/src/views/account_dashboard_kanban/account_dashboard_kanban.scss
@@ -4,7 +4,7 @@
         border: 1px dashed $border-color;
         &.drag_to_card {
             border-color: $o-brand-primary;
-            background-color: #F2EDF0;
+            background-color: mix($o-brand-primary, $o-view-background-color, 15%);
         }
     }
 }
