[FIX] web: hide multiple default buttons in dialogs
Currently the dialog layout contains a default "Ok" button that is
hidden via a css rule if it isn't the only element in its parent.

In point_of_sale multiple "default buttons" can exist in a dialog.

For this reason we want to instead check if the parent has any
non-default-button elements, and if so hide the default buttons. Which
enables multiple "default buttons"

task-5103532

--- a/addons/web/static/src/core/dialog/dialog.scss
+++ b/addons/web/static/src/core/dialog/dialog.scss
@@ -14,8 +14,18 @@
             margin: 0; // Reset boostrap.
         }
 
-        button.o-default-button:not(:only-child) {
-            display: none;
+        // hide default buttons if there are non-default elements
+        // such as buttons added by the form dialog
+        &:has(> button.o-default-button):has(> :not(.o-default-button)) {
+            button.o-default-button {
+                display: none;
+            }
+        }
+        // in case the buttons were moved inside a div
+        *:has(> button.o-default-button):has(:not(.o-default-button)) {
+            button.o-default-button {
+                display: none;
+            }
         }
         
         @include media-breakpoint-down(md) {
